--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta charset="utf-8" name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"></meta>
 
     <title>Festerr</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/EventDetail.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
-    <link rel="stylesheet" type="text/css" href="css/gridStyles.css">
-    <link rel="stylesheet" type="text/css" href="css/signup.css">
-    <link rel="stylesheet" type="text/css" href="css/header.css">
-    <link rel="stylesheet" type="text/css" href="css/festivalCard.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/EventDetail.css"></link>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/gridStyles.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/signup.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/header.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/festivalCard.css"></link>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'></link>
 
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"> -->
-    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="/images/favicon/favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'></link>
+    <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="/images/favicon/favicon.ico"></link>
 
     <!--<link rel="shortcut icon" href="/images/favicon.ico/favicon-16x16.png" type="image/x-icon" />-->
 </head>
 
 <body data-ng-app="festerrApp">
 
-    <div data-ng-view><div>
+    <div data-ng-view></div>
 
     <!-- Latest compiled and minified JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.min.js"></script>
