--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -3,7 +3,7 @@
     <ng-include src="'/app/views/header/header.html'"></ng-include>
 
     <div id="event-container">
-        <div id="event-image">
+        <div id="event-image" ng-style="{ 'background-image': 'url(' + event.headerimageurl + ')'}">
         </div>
         <div id="event-details-container">
             <div id="event-header-container" class="panel">
