--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -45,9 +45,20 @@ md-input-container{
 }
 
 #signin-spotify{
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
+    border-radius: 40px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    transition: all 300ms;
+}
+
+#signin-spotify:hover { 
+    transform: scale(1.1);
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.15);
+
 }
 
 #signin-container{
