make header festerr text into link to homepage

--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -2,7 +2,7 @@
 
     <div id="main-header-bar">
         <div id="header-text-container">
-            <h1>Festerr</h1>
+            <h1><a href="/#/">Festerr</a></h1>
         </div>
 
         <div id="header-search-box-container">
