include favourites css

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/signup.css"></link>
     <link rel="stylesheet" type="text/css" href="css/header.css"></link>
     <link rel="stylesheet" type="text/css" href="css/festivalCard.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/favourites.css"></link>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'></link>
 
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'></link>
