--- a/public/css/EventDetail.css
+++ b/public/css/EventDetail.css
@@ -2,6 +2,9 @@
 	width:100%;    
 	height : 100%;	
     background-color: #f5f5f5;   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #event-image {
@@ -17,11 +20,9 @@
 
 #event-details-container {
     position:relative;
-    width: 100%;
+    width: 800px;
     height: 100%;
     margin-top: 50vh;
-    z-index: 100;
-    padding: 0px 100px 0px 100px;
     background-color: rgba(0,0,0,0);
     display: flex;
     flex-flow: column;
@@ -34,7 +35,7 @@
 }
 
 .panel {
-    width: 100%;
+    width: 80%;
     min-height: 280px;
     border-radius: 2px;
     margin-bottom: 40px;
@@ -70,7 +71,7 @@
     height: 80px;
     width: 80px;
     top: -40px;
-    right: 150px;
+    right: 30px;
     border-radius: 50%;
     position: absolute;
     display: flex;
