--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,6 @@
 #signup-dialog {
     height: 350px;
-    width: 400px;
+    /*width: 400px;*/
 }
 
 md-dialog.md-default-theme {
@@ -21,7 +21,7 @@ md-input-container{
 }
 
 #signup-dialog-container{
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-flow: column;
     justify-content: space-between; /* align horizontal */
@@ -45,9 +45,20 @@ md-input-container{
 }
 
 #signin-spotify{
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
+    border-radius: 40px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    transition: all 300ms;
+}
+
+#signin-spotify:hover { 
+    transform: scale(1.1);
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.15);
+
 }
 
 #signin-container{
