add responsive breakpoints to event detail contaniner

--- a/public/css/EventDetail.css
+++ b/public/css/EventDetail.css
@@ -20,7 +20,7 @@
 
 #event-details-container {
     position:relative;
-    width: 800px;
+    width: 900px;
     height: 100%;
     margin-top: 50vh;
     background-color: rgba(0,0,0,0);
@@ -142,6 +142,16 @@
 @media (max-width : 970px) {
     .event-info-container .md-headline{
         width:400px;
+    }
+    
+    #event-details-container {
+        width: 600px;
+    }
+}
+
+@media (max-width : 550px) {
+    #event-details-container {
+        width: 400px;
     }
 }
 
