--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -32,7 +32,7 @@
                     <div class="info-box">
                         <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
                         </md-icon>
-                        {{event.venue.name}} {{event.venue.address}}
+                        {{event.venue.name}}</br> {{event.venue.address}}
                     </div>
                     <div class="info-box">
                         <md-icon md-svg-src="/images/cash.svg" aria-label="Price">
