change to only 2 top tabs

--- a/public/app/views/favouritesList/favouritesList.html
+++ b/public/app/views/favouritesList/favouritesList.html
@@ -6,7 +6,7 @@
     </div>
     
     <div ng-if="!authedUser" style="height:200px;padding-top: 100px;font-size:large;">
-        Log into Festerr to start adding favourite festivals!
+        Log into Festerr with your Spotify account to start adding and saving your favourite festivals!
     </div>
 
     <!-- TILES CONTAINER -->
