--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -36,12 +36,10 @@
     
     <div id="tabs-header-bar" class="nav-down">
         <div id="header-tabs-container">
-        <md-tabs md-dynamic-height md-border-bottom>
+        <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
             <md-tab label="What's Hot" md-on-select="onTabSelected(0)">
             </md-tab>
-            <md-tab label="Upcoming" md-on-select="onTabSelected(1)">
-            </md-tab>
-            <md-tab label="Favourites" md-on-select="onTabSelected(2)">
+            <md-tab label="Your Favourites" md-on-select="onTabSelected(2)">
             </md-tab>
         </md-tabs>
     </div>
