Add loading SVG

--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -4,7 +4,7 @@
 
     <!-- Loading progress bar -->
     <div id="progress-container" ng-show="!eventLoaded">
-        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+        <img src="/images/logo_loading.svg" height="80"></img>
     </div>
 
     <div id="event-container" ng-show="eventLoaded">
