--- a/public/app/views/favouritesList/favouritesList.html
+++ b/public/app/views/favouritesList/favouritesList.html
@@ -2,7 +2,7 @@
 
     <!-- Loading progress bar -->
     <div id="progress-container" ng-show="!eventsLoaded">
-        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+        <img src="/images/logo_loading.svg" height="80"></img>
     </div>
     
     <div ng-if="!authedUser" style="height:200px;padding-top: 100px;font-size:large;">
