--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -2,6 +2,7 @@
 
     <div id="main-header-bar">
         <div id="header-text-container">
+            <img src="/images/logo.svg" height="56" alt="Fester"/>
             <h1><a href="/#/">Festerr</a></h1>
         </div>
 
