--- a/public/app/views/festivalList/festivalList.html
+++ b/public/app/views/festivalList/festivalList.html
@@ -2,7 +2,7 @@
 
     <!-- Loading progress bar -->
     <div id="progress-container" ng-show="!eventsLoaded">
-        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+        <img src="/images/logo_loading.svg" height="80"></img>
     </div>
 
     <!-- TILES CONTAINER -->
