fix favourite list text being fucked up

--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -24,21 +24,21 @@
                 </p>
                 <span class="divider"></span>
                 <div id="event-header-info-bar">
-                    <div class="info-box">
+                    <div class="info-box" style="width:40%">
                         <md-icon md-svg-src="/images/event_gray.svg" aria-label="Date">
                         </md-icon>
                         <div class="text">
                             {{formatDate(event.date)}}
                         </div>
                     </div>
-                    <div class="info-box">
+                    <div class="info-box" style="width:40%">
                         <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
                         </md-icon>
                         <div class="text">
                             {{event.venue.name}}</br> {{event.venue.town}}
                         </div>
                     </div>
-                    <div class="info-box">
+                    <div class="info-box" style="width:40%">
                         <md-icon md-svg-src="/images/cash.svg" aria-label="Price">
                         </md-icon>
                         <div class="text">
