--- a/public/css/favourites.css
+++ b/public/css/favourites.css
@@ -13,7 +13,11 @@
     align-items: center;
     margin-bottom: 20px;
     box-shadow: 2px 2px 4px #AAAAAA;
+    transition: all 300ms;
+}
 
+.favourite-card:hover{
+    transform: scale(1.05);
 }
 
 .favourite-card .festival-image {
