Report and favourite list fixes (#122)
* update

* add use rlikes stuff

* reorder stuff

* spell checking

* add clicking favorutie brings user to event detail page

* fix favourite list text being fucked up

--- a/public/app/views/favouritesList/favouritesList.html
+++ b/public/app/views/favouritesList/favouritesList.html
@@ -4,7 +4,7 @@
     <div id="progress-container" ng-show="!eventsLoaded">
         <md-progress-circular md-mode="indeterminate"></md-progress-circular>
     </div>
-    
+
     <div ng-if="!authedUser" style="height:200px;padding-top: 100px;font-size:large;">
         Log into Festerr with your Spotify account to start adding and saving your favourite festivals!
     </div>
@@ -12,7 +12,7 @@
     <!-- TILES CONTAINER -->
     <div id="info-container" ng-show="eventsLoaded">
         <div id="favourite-card-list-container">
-            <div class="favourite-card" ng-repeat="event in favouriteEvents">
+            <div class="favourite-card" ng-repeat="event in favouriteEvents" ng-click="favouriteClicked(event)">
                 <div class="festival-image" ng-style="{'background-image': 'url(' + event.largeimageurl +')'}">
 
                 </div>
@@ -21,20 +21,20 @@
                         {{event.eventname}}
                     </div>
                     <div class="event-details">
-                        <div class="info-box">
+                        <div class="info-box" style="width:100%">
                             <md-icon md-svg-src="/images/event_gray.svg" aria-label="Date">
                             </md-icon>
-                            {{formatDate(event.date)}}
+                            <div class="text" style="width:90%"> {{formatDate(event.date)}}</div>
                         </div>
-                        <div class="info-box">
+                        <div class="info-box" style="width:100%">
                             <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
                             </md-icon>
-                            {{event.venue.name}} {{event.venue.address}}
+                            <div class="text" style="width:90%">{{event.venue.name}} {{event.venue.address}}</div>
                         </div>
-                        <div class="info-box">
+                        <div class="info-box" style="width:100%">
                             <md-icon md-svg-src="/images/cash.svg" aria-label="Price">
                             </md-icon>
-                            {{event.entryprice}}
+                            <div class="text" style="width:90%">{{event.entryprice}}</div>
                         </div>
                     </div>
                 </div>
