--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -47,8 +47,7 @@
                     </div>
                 </div>
                 <div id="event-header-actions">
-                    <md-button>Favourite</md-button>
-                    <md-button href="{{::event.link}}" target="_blank" class="md-primary" ng-style="{ 'color': 'rgb(' + event.palette.Vibrant.rgb + ')'}">
+                    <md-button href="{{::event.link}}" target="_blank" class="md-raised" ng-style="{ 'background-color': 'rgb(' + event.palette.Vibrant.rgb + ')'}">
                         Buy Tickets
                     </md-button>
                 </div>
