--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -4,7 +4,7 @@
 
     <!-- Loading progress bar -->
     <div id="progress-container" ng-show="!eventLoaded">
-        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+        <img src="/images/logo_loading.svg" height="80"></img>
     </div>
 
     <div id="event-container" ng-show="eventLoaded">
@@ -12,7 +12,7 @@
         </div>
         <div id="event-details-container">
             <div id="event-header-container" class="panel">
-                <div id="event-like-circle" ng-click="likeClicked()">
+                <div id="event-like-circle" ng-click="likeClicked()" ng-style="{ 'background': 'rgb(' + event.palette.Vibrant.rgb + ')'}">
                     <md-icon ng-if="!eventLiked" md-svg-src="/images/fav_white_border.svg" aria-label="Date" style="width: 48px;height: 48px;">
                     </md-icon>
                     <md-icon ng-if="eventLiked" md-svg-src="/images/fav_white.svg" aria-label="Date" style="width: 48px;height: 48px;">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div id="event-header-actions">
-                    <md-button href="{{::event.link}}" target="_blank" class="md-primary">
+                    <md-button href="{{::event.link}}" target="_blank" class="md-raised" ng-style="{ 'background-color': 'rgb(' + event.palette.Vibrant.rgb + ')'}">
                         Buy Tickets
                     </md-button>
                 </div>
@@ -68,7 +68,7 @@
                 </md-grid-list>
             </div>
             <div class="event-info-container panel">
-                <span class="md-headline">Other Artists</span>
+                <span class="md-headline">{{ userArtists.length ? 'Other Artists' : 'Artists' }}</span>
                 <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
                     md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="tile" ng-repeat="tile in otherArtists" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile"
